--- a/src/main/resources/assets/rubin/lang/en_us.json
+++ b/src/main/resources/assets/rubin/lang/en_us.json
@@ -1,6 +1,8 @@
 {
   "item.minecraft.potion.effect.ddw": "Ddwппп",
+  "advancements.dostizhieniie_3.title": "Смерть для нежити",
   "item.rubin.rubin_armorpickaxe": "Рубиновая кирка",
+  "advancements.dostizhieniie_3.descr": "Получить рубиновый меч",
   "item.rubin.rubin_armoraxe": "Рубиновый топор",
   "item.minecraft.lingering_potion.effect.ddw": "Lingering Ddwппп",
   "item.rubin.rubin_armor2armorbody": "Рубиновый нагрудник",
@@ -21,27 +23,31 @@
   "effect.ddw": "Ddw",
   "item.rubin.rubin": "Рубин",
   "item.rubin.rubin_armor_hoe": "Рубиновая мотыга",
+  "advancements.dostizhieniie_4.descr": "Думаю ты сам понял...",
   "advancements.dostizhieniia.descr": "Получить свой первый рубин",
   "item.rubin.rubin_armor_2_armor_boots": "Рубиновые ботинки",
   "item.minecraft.splash_potion.effect.rubinzelee": "Splash Рубец",
+  "advancements.dostizhieniie_5.descr": "Получить рубинувую мотыгу",
   "item.rubin.rubin_armor_2_armor_leggings": "Рубиновые поножи",
   "advancements.dostizhieniia.title": "Красный незерит",
   "item.rubin.rubin_armor_sword": "Рубиновый меч",
   "subtitles.hodba": "",
   "item.rubin.kuritsa": "Рубцовая курица Spawn Egg",
   "item.minecraft.tipped_arrow.effect.rubinzelee": "Arrow of Рубец",
-  "advancements.dostizhieniie_2.descr": "Войти в измерение",
+  "advancements.dostizhieniie_2.descr": "Получить рубиновый нагрудник",
+  "advancements.dostizhieniie_5.title": "Ну и зачем оно тебе?",
   "item.rubin.rubin_armorsword": "Рубиновый меч",
   "block.rubin.rubin_gem": "Рубиновая руда",
   "subtitles.goloca": "Что-то упало",
   "item.rubin.rubin_armor2armorboots": "Рубиновые ботинки",
   "item.minecraft.tipped_arrow.effect.ddw": "Arrow of Ddwппп",
   "subtitles.portal": "Игрок умирает",
-  "advancements.dostizhieniie_2.title": "Добро пожаловать в Россию!",
+  "advancements.dostizhieniie_2.title": "Божественные доспехи",
   "subtitles.dlia_portala": "Предмет подобран",
   "item.minecraft.splash_potion.effect.ddw": "Splash Ddwппп",
   "item.rubin.rubin_armor2armorhelmet": "Рубиновый шлем",
   "block.rubin.rubinovyighladkiiblok": "Гладкий рубиновый блок",
+  "advancements.dostizhieniie_4.title": "Чел, ты серьёзно?",
   "subtitles.plastinka": "",
   "item.minecraft.potion.effect.rubinzelee": "Рубец",
   "subtitles.golem": "Игрок телепортируется",
