--- a/src/main/resources/assets/rubin/lang/ru_ru.json
+++ b/src/main/resources/assets/rubin/lang/ru_ru.json
@@ -24,10 +24,10 @@
   "item.rubin.rubin_armor2armorhelmet": "Рубиновый шлем",
   "block.rubin.rubin_gem4oreblock": "Рубиновый блок",
   "item.rubin.rubin_armor_2_armor_helmet": "Рубиновый шлем",
-  "advancements.dostizhieniie_4.title": "Ты серьёзно переосмыслил свою жизнь?",
+  "advancements.dostizhieniie_4.title": "Ты серьёзно?",
   "item.rubin.rubin": "Рубин",
   "item.rubin.rubin_armor_hoe": "Рубиновая мотыга",
-  "advancements.dostizhieniie_4.descr": "Сломать рубиновую мотыгу",
+  "advancements.dostizhieniie_4.descr": "Познай смысл жизни",
   "advancements.dostizhieniia.descr": "Получить свой первый рубин",
   "item.rubin.rubin_armor_2_armor_boots": "Рубиновые ботинки",
   "item.rubin.rubin_armor_pickaxe": "Рубиновая кирка",
